# RGBD_annotation

./: README.md
image_collect/: record.txt
image_collect/devel/: .catkin  setup.sh
image_collect/devel/lib/pkgconfig/: savePic.pc
image_collect/devel/lib/savePic/: opendeep  saveRGB  savedeepth
image_collect/devel/share/savePic/cmake/: savePicConfig.cmake
image_collect/src/savePic/: CMakeLists.txt
image_collect/src/savePic/src/: opendeep.cpp  openxtion.cpp  saveRGB.cpp  savedeepth.cpp
